--- a/Mafia/PlayTableViewCell.xib
+++ b/Mafia/PlayTableViewCell.xib
@@ -6,16 +6,17 @@
     <dependencies>
         <deployment identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="12088"/>
+        <capability name="Constraints to layout margins" minToolsVersion="6.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
-        <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" reuseIdentifier="PlayTableViewCell" rowHeight="118" id="KGk-i7-Jjw" customClass="PlayTableViewCell" customModule="Mafia" customModuleProvider="target">
-            <rect key="frame" x="0.0" y="0.0" width="537" height="118"/>
+        <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" reuseIdentifier="PlayTableViewCell" rowHeight="110" id="KGk-i7-Jjw" customClass="PlayTableViewCell" customModule="Mafia" customModuleProvider="target">
+            <rect key="frame" x="0.0" y="0.0" width="537" height="110"/>
             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
             <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="KGk-i7-Jjw" id="H2p-sc-9uM" customClass="PlayTableViewCell" customModule="Mafia" customModuleProvider="target">
-                <rect key="frame" x="0.0" y="0.0" width="537" height="117.5"/>
+                <rect key="frame" x="0.0" y="0.0" width="537" height="109.5"/>
                 <autoresizingMask key="autoresizingMask"/>
                 <subviews>
                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Name" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="E4d-Xw-hc8">
@@ -32,27 +33,33 @@
                         <nil key="textColor"/>
                         <nil key="highlightedColor"/>
                     </label>
-                    <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="O51-Ut-LpD">
-                        <rect key="frame" x="74" y="68" width="46" height="30"/>
-                        <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="O51-Ut-LpD">
+                        <rect key="frame" x="74" y="68" width="30" height="30"/>
                         <state key="normal" title="H"/>
                     </button>
-                    <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="ijN-ej-izS">
-                        <rect key="frame" x="134" y="68" width="46" height="30"/>
-                        <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="ijN-ej-izS">
+                        <rect key="frame" x="134" y="68" width="30" height="30"/>
                         <state key="normal" title="K"/>
                     </button>
-                    <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="4Cv-3I-Pqz">
-                        <rect key="frame" x="188" y="68" width="46" height="30"/>
-                        <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="4Cv-3I-Pqz">
+                        <rect key="frame" x="188" y="68" width="31" height="30"/>
                         <state key="normal" title="Kom"/>
                     </button>
-                    <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="xHi-Kd-01W">
-                        <rect key="frame" x="245" y="68" width="46" height="30"/>
-                        <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="xHi-Kd-01W">
+                        <rect key="frame" x="245" y="68" width="30" height="30"/>
                         <state key="normal" title="Put"/>
                     </button>
                 </subviews>
+                <constraints>
+                    <constraint firstItem="4Cv-3I-Pqz" firstAttribute="leading" secondItem="ijN-ej-izS" secondAttribute="trailing" constant="24" id="JNy-OP-NAm"/>
+                    <constraint firstAttribute="bottomMargin" secondItem="ijN-ej-izS" secondAttribute="bottom" constant="3.5" id="LOi-u8-ZWg"/>
+                    <constraint firstAttribute="bottomMargin" secondItem="4Cv-3I-Pqz" secondAttribute="bottom" constant="3.5" id="aEK-YJ-Nxe"/>
+                    <constraint firstItem="O51-Ut-LpD" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leadingMargin" constant="66" id="dpq-Dx-BgJ"/>
+                    <constraint firstAttribute="bottomMargin" secondItem="xHi-Kd-01W" secondAttribute="bottom" constant="3.5" id="hIk-j9-jQL"/>
+                    <constraint firstItem="ijN-ej-izS" firstAttribute="leading" secondItem="O51-Ut-LpD" secondAttribute="trailing" constant="30" id="qln-wo-XOF"/>
+                    <constraint firstItem="xHi-Kd-01W" firstAttribute="leading" secondItem="4Cv-3I-Pqz" secondAttribute="trailing" constant="26" id="reS-BF-Kgh"/>
+                    <constraint firstAttribute="bottomMargin" secondItem="O51-Ut-LpD" secondAttribute="bottom" constant="4" id="w7m-5L-8qe"/>
+                </constraints>
             </tableViewCellContentView>
             <connections>
                 <outlet property="checkButton" destination="4Cv-3I-Pqz" id="gqk-HO-Z1N"/>
@@ -62,7 +69,7 @@
                 <outlet property="numberLaber" destination="hL8-9W-9ro" id="OmH-NF-CzZ"/>
                 <outlet property="silenceButton" destination="xHi-Kd-01W" id="j8q-sg-4SH"/>
             </connections>
-            <point key="canvasLocation" x="-27.5" y="67"/>
+            <point key="canvasLocation" x="-27.5" y="63"/>
         </tableViewCell>
     </objects>
 </document>
