--- a/Mafia/PlayTableViewCell.xib
+++ b/Mafia/PlayTableViewCell.xib
@@ -6,61 +6,83 @@
     <dependencies>
         <deployment identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="12088"/>
-        <capability name="Constraints to layout margins" minToolsVersion="6.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
-        <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" reuseIdentifier="PlayTableViewCell" rowHeight="110" id="KGk-i7-Jjw" customClass="PlayTableViewCell" customModule="Mafia" customModuleProvider="target">
-            <rect key="frame" x="0.0" y="0.0" width="537" height="110"/>
+        <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" reuseIdentifier="PlayTableViewCell" rowHeight="65" id="KGk-i7-Jjw" customClass="PlayTableViewCell" customModule="Mafia" customModuleProvider="target">
+            <rect key="frame" x="0.0" y="0.0" width="290" height="65"/>
             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
             <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="KGk-i7-Jjw" id="H2p-sc-9uM" customClass="PlayTableViewCell" customModule="Mafia" customModuleProvider="target">
-                <rect key="frame" x="0.0" y="0.0" width="537" height="109.5"/>
+                <rect key="frame" x="0.0" y="0.0" width="290" height="64.5"/>
                 <autoresizingMask key="autoresizingMask"/>
                 <subviews>
                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Name" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="E4d-Xw-hc8">
-                        <rect key="frame" x="134" y="28" width="115" height="21"/>
+                        <rect key="frame" x="80.5" y="5" width="48.5" height="21"/>
                         <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                        <fontDescription key="fontDescription" type="system" pointSize="17"/>
-                        <nil key="textColor"/>
+                        <fontDescription key="fontDescription" name="Helvetica" family="Helvetica" pointSize="18"/>
+                        <color key="textColor" red="0.20392156862745098" green="0.16470588235294117" blue="0.16470588235294117" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                         <nil key="highlightedColor"/>
                     </label>
                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="1" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="hL8-9W-9ro">
-                        <rect key="frame" x="78" y="28" width="42" height="21"/>
+                        <rect key="frame" x="71" y="9" width="8" height="17"/>
                         <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                        <fontDescription key="fontDescription" type="system" pointSize="17"/>
-                        <nil key="textColor"/>
+                        <fontDescription key="fontDescription" name="Helvetica" family="Helvetica" pointSize="14"/>
+                        <color key="textColor" red="0.53333333333333333" green="0.53333333333333333" blue="0.53333333333333333" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                         <nil key="highlightedColor"/>
                     </label>
-                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="O51-Ut-LpD">
-                        <rect key="frame" x="74" y="68" width="30" height="30"/>
-                        <state key="normal" title="H"/>
-                    </button>
-                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="ijN-ej-izS">
-                        <rect key="frame" x="134" y="68" width="30" height="30"/>
-                        <state key="normal" title="K"/>
-                    </button>
-                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="4Cv-3I-Pqz">
-                        <rect key="frame" x="188" y="68" width="31" height="30"/>
-                        <state key="normal" title="Kom"/>
-                    </button>
-                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="xHi-Kd-01W">
-                        <rect key="frame" x="245" y="68" width="30" height="30"/>
-                        <state key="normal" title="Put"/>
-                    </button>
+                    <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" image="Role icon sitizen" translatesAutoresizingMaskIntoConstraints="NO" id="xnQ-nS-ORP">
+                        <rect key="frame" x="5" y="5" width="55" height="59"/>
+                        <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                    </imageView>
+                    <stackView opaque="NO" contentMode="scaleToFill" fixedFrame="YES" distribution="equalSpacing" translatesAutoresizingMaskIntoConstraints="NO" id="ABd-NU-ukh">
+                        <rect key="frame" x="71" y="32.5" width="147" height="26"/>
+                        <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                        <subviews>
+                            <button opaque="NO" alpha="0.29999999999999999" contentMode="scaleToFill" ambiguous="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="xHi-Kd-01W">
+                                <rect key="frame" x="0.0" y="0.0" width="28" height="26"/>
+                                <state key="normal" image="icon night love"/>
+                            </button>
+                            <button opaque="NO" alpha="0.29999999999999999" contentMode="scaleToFill" ambiguous="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="4Cv-3I-Pqz">
+                                <rect key="frame" x="28" y="0.0" width="23" height="26"/>
+                                <state key="normal" image="icon loop"/>
+                            </button>
+                            <button opaque="NO" alpha="0.29999999999999999" contentMode="scaleToFill" ambiguous="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="ijN-ej-izS">
+                                <rect key="frame" x="51" y="0.0" width="24" height="26"/>
+                                <state key="normal" image="icon kill"/>
+                            </button>
+                            <button opaque="NO" alpha="0.29999999999999999" contentMode="scaleToFill" ambiguous="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="O51-Ut-LpD">
+                                <rect key="frame" x="75" y="0.0" width="24" height="26"/>
+                                <state key="normal" image="icon medic"/>
+                            </button>
+                            <button opaque="NO" alpha="0.29999999999999999" contentMode="scaleToFill" ambiguous="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="lPh-dv-P0F">
+                                <rect key="frame" x="99" y="0.0" width="19" height="26"/>
+                                <state key="normal" image="icon maniac"/>
+                            </button>
+                            <button opaque="NO" alpha="0.29999999999999999" contentMode="scaleToFill" ambiguous="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="raQ-9Z-PSN">
+                                <rect key="frame" x="118" y="0.0" width="29" height="26"/>
+                                <state key="normal" image="icon boss check"/>
+                            </button>
+                        </subviews>
+                    </stackView>
+                    <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" ambiguous="YES" translatesAutoresizingMaskIntoConstraints="NO" id="8xF-Fk-iqf">
+                        <rect key="frame" x="66" y="0.0" width="1" height="65"/>
+                        <color key="backgroundColor" red="0.74901960784313726" green="0.74901960784313726" blue="0.74901960784313726" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                        <constraints>
+                            <constraint firstAttribute="width" constant="1" id="MsM-97-RTd"/>
+                        </constraints>
+                    </imageView>
+                    <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" ambiguous="YES" translatesAutoresizingMaskIntoConstraints="NO" id="m8S-Xc-W8o">
+                        <rect key="frame" x="274" y="0.0" width="1" height="65"/>
+                        <color key="backgroundColor" red="0.74901960779999999" green="0.74901960779999999" blue="0.74901960779999999" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                        <constraints>
+                            <constraint firstAttribute="width" constant="1" id="hcv-wT-CY0"/>
+                        </constraints>
+                    </imageView>
                 </subviews>
-                <constraints>
-                    <constraint firstItem="4Cv-3I-Pqz" firstAttribute="leading" secondItem="ijN-ej-izS" secondAttribute="trailing" constant="24" id="JNy-OP-NAm"/>
-                    <constraint firstAttribute="bottomMargin" secondItem="ijN-ej-izS" secondAttribute="bottom" constant="3.5" id="LOi-u8-ZWg"/>
-                    <constraint firstAttribute="bottomMargin" secondItem="4Cv-3I-Pqz" secondAttribute="bottom" constant="3.5" id="aEK-YJ-Nxe"/>
-                    <constraint firstItem="O51-Ut-LpD" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leadingMargin" constant="66" id="dpq-Dx-BgJ"/>
-                    <constraint firstAttribute="bottomMargin" secondItem="xHi-Kd-01W" secondAttribute="bottom" constant="3.5" id="hIk-j9-jQL"/>
-                    <constraint firstItem="ijN-ej-izS" firstAttribute="leading" secondItem="O51-Ut-LpD" secondAttribute="trailing" constant="30" id="qln-wo-XOF"/>
-                    <constraint firstItem="xHi-Kd-01W" firstAttribute="leading" secondItem="4Cv-3I-Pqz" secondAttribute="trailing" constant="26" id="reS-BF-Kgh"/>
-                    <constraint firstAttribute="bottomMargin" secondItem="O51-Ut-LpD" secondAttribute="bottom" constant="4" id="w7m-5L-8qe"/>
-                </constraints>
             </tableViewCellContentView>
+            <color key="backgroundColor" red="0.90980392156862744" green="0.90980392156862744" blue="0.90980392156862744" alpha="0.59999999999999998" colorSpace="custom" customColorSpace="sRGB"/>
             <connections>
                 <outlet property="checkButton" destination="4Cv-3I-Pqz" id="gqk-HO-Z1N"/>
                 <outlet property="healButton" destination="O51-Ut-LpD" id="uvE-2y-2V5"/>
@@ -69,7 +91,16 @@
                 <outlet property="numberLaber" destination="hL8-9W-9ro" id="OmH-NF-CzZ"/>
                 <outlet property="silenceButton" destination="xHi-Kd-01W" id="j8q-sg-4SH"/>
             </connections>
-            <point key="canvasLocation" x="-27.5" y="63"/>
+            <point key="canvasLocation" x="-172" y="19.5"/>
         </tableViewCell>
     </objects>
+    <resources>
+        <image name="Role icon sitizen" width="59" height="59"/>
+        <image name="icon boss check" width="29" height="23"/>
+        <image name="icon kill" width="24" height="23"/>
+        <image name="icon loop" width="23" height="26"/>
+        <image name="icon maniac" width="19" height="24"/>
+        <image name="icon medic" width="24" height="23"/>
+        <image name="icon night love" width="28" height="23"/>
+    </resources>
 </document>
